--- a/lit.bib
+++ b/lit.bib
@@ -58,3 +58,17 @@
   year={2022}, 
   pages={400–429}
 }
+@article{DBLP:journals/corr/abs-1205-6233,
+  author       = {Jaewon Yang and
+                  Jure Leskovec},
+  title        = {Defining and Evaluating Network Communities based on Ground-truth},
+  journal      = {CoRR},
+  volume       = {abs/1205.6233},
+  year         = {2012},
+  url          = {http://arxiv.org/abs/1205.6233},
+  eprinttype    = {arXiv},
+  eprint       = {1205.6233},
+  timestamp    = {Mon, 13 Aug 2018 16:49:09 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-1205-6233.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
