--- a/header.tex
+++ b/header.tex
@@ -2,3 +2,5 @@
 \usepackage[colorinlistoftodos]{todonotes}
 \usepackage{hyperref}
 \newtheorem{lemma}{Lemma}[section]
+\DeclareMathOperator*{\argmax}{arg\,max}
+
