--- a/header.tex
+++ b/header.tex
@@ -1,6 +1,7 @@
 \usepackage{algorithm2e}
 \usepackage[colorinlistoftodos]{todonotes}
 \usepackage{hyperref}
+\usepackage{booktabs}
 \newtheorem{lemma}{Lemma}[section]
 \DeclareMathOperator*{\argmax}{arg\,max}
 
