--- a/header.tex
+++ b/header.tex
@@ -2,6 +2,8 @@
 \usepackage[colorinlistoftodos]{todonotes}
 \usepackage{hyperref}
 \usepackage{booktabs}
+\usepackage{caption}
+\usepackage{subcaption}
 \newtheorem{lemma}{Lemma}[section]
 \DeclareMathOperator*{\argmax}{arg\,max}
 
