pretty up table output

--- a/header.tex
+++ b/header.tex
@@ -4,6 +4,7 @@
 \usepackage{booktabs}
 \usepackage{caption}
 \usepackage{subcaption}
+\usepackage{multirow}
+
 \newtheorem{lemma}{Lemma}[section]
 \DeclareMathOperator*{\argmax}{arg\,max}
-
