--- a/lit.bib
+++ b/lit.bib
@@ -72,3 +72,18 @@
   biburl       = {https://dblp.org/rec/journals/corr/abs-1205-6233.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
+@InProceedings{10.1007/978-3-642-29116-6_6,
+author="Brankovic, Ljiljana
+and Fernau, Henning",
+editor="Solis-Oba, Roberto
+and Persiano, Giuseppe",
+title="Parameterized Approximation Algorithms for Hitting Set",
+booktitle="Approximation and Online Algorithms",
+year="2012",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="63--76",
+abstract="We are going to analyze simple search tree algorithms for approximating d-Hitting Set, focussing on the case of factor-2 approximations for d{\thinspace}={\thinspace}3. We also derive several results for hypergraph instances of bounded degree, including a new polynomial-time approximation.",
+isbn="978-3-642-29116-6"
+}
