--- a/tex/lit.bib
+++ b/tex/lit.bib
@@ -87,3 +87,41 @@ pages="63--76",
 abstract="We are going to analyze simple search tree algorithms for approximating d-Hitting Set, focussing on the case of factor-2 approximations for d{\thinspace}={\thinspace}3. We also derive several results for hypergraph instances of bounded degree, including a new polynomial-time approximation.",
 isbn="978-3-642-29116-6"
 }
+@inproceedings{DBLP:conf/approx/SaketS12,
+  author       = {Rishi Saket and
+                  Maxim Sviridenko},
+  editor       = {Anupam Gupta and
+                  Klaus Jansen and
+                  Jos{\'{e}} D. P. Rolim and
+                  Rocco A. Servedio},
+  title        = {New and Improved Bounds for the Minimum Set Cover Problem},
+  booktitle    = {Approximation, Randomization, and Combinatorial Optimization. Algorithms
+                  and Techniques - 15th International Workshop, {APPROX} 2012, and 16th
+                  International Workshop, {RANDOM} 2012, Cambridge, MA, USA, August
+                  15-17, 2012. Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {7408},
+  pages        = {288--300},
+  publisher    = {Springer},
+  year         = {2012},
+  url          = {https://doi.org/10.1007/978-3-642-32512-0\_25},
+  doi          = {10.1007/978-3-642-32512-0\_25},
+  timestamp    = {Tue, 21 Sep 2021 09:36:24 +0200},
+  biburl       = {https://dblp.org/rec/conf/approx/SaketS12.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+@article{DBLP:journals/tcs/OualiFS14,
+  author       = {Mourad El Ouali and
+                  Helena Fohlin and
+                  Anand Srivastav},
+  title        = {A randomised approximation algorithm for the hitting set problem},
+  journal      = {Theor. Comput. Sci.},
+  volume       = {555},
+  pages        = {23--34},
+  year         = {2014},
+  url          = {https://doi.org/10.1016/j.tcs.2014.03.029},
+  doi          = {10.1016/J.TCS.2014.03.029},
+  timestamp    = {Wed, 17 Feb 2021 21:58:44 +0100},
+  biburl       = {https://dblp.org/rec/journals/tcs/OualiFS14.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
