--- a/tex/lit.bib
+++ b/tex/lit.bib
@@ -125,3 +125,55 @@ isbn="978-3-642-29116-6"
   biburl       = {https://dblp.org/rec/journals/tcs/OualiFS14.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+@misc{GH:pulp,
+  author       = {Jean-Sebastien Roy and
+                  Stuart A. Mitchell and
+                  Christophe-Marie Duquesne and
+                  Franco Peschiera and
+                  Antony Phillips},
+  title        = {PuLP},
+  year         = {2024},
+  howpublished = {\url{https://github.com/coin-or/pulp}},
+}
+
+@misc{GH:clp,
+  author       = {John Forrest},
+  title        = {coin-or/Clp: Release releases/1.17.9},
+  year         = {2024},
+  howpublished = {\url{https://github.com/coin-or/Clp}},
+  publisher    = {Zenodo},
+  doi          = {10.5281/zenodo.10041272}
+}
+
+@misc{GH:highs,
+  author       = {Julian Hall and
+                  Ivet Galabova and
+                  Qi Huangfu and
+                  Leona Gottwald and
+                  Michael Feldmeier},
+  title        = {HiGHS},
+  year         = {2024},
+  howpublished = {\url{https://github.com/ERGO-Code/HiGHS}},
+}
+
+@misc{GH:glpk,
+  title        = {GLPK},
+  year         = {2024},
+  howpublished = {\url{https://www.gnu.org/software/glpk/glpk.html}},
+}
+
+@article{DBLP:journals/mpc/HuangfuH18,
+  author       = {Qi Huangfu and
+                  J. A. J. Hall},
+  title        = {Parallelizing the dual revised simplex method},
+  journal      = {Math. Program. Comput.},
+  volume       = {10},
+  number       = {1},
+  pages        = {119--142},
+  year         = {2018},
+  url          = {https://doi.org/10.1007/s12532-017-0130-5},
+  doi          = {10.1007/S12532-017-0130-5},
+  timestamp    = {Fri, 31 Jan 2020 21:32:05 +0100},
+  biburl       = {https://dblp.org/rec/journals/mpc/HuangfuH18.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
