--- a/tex/lit.bib
+++ b/tex/lit.bib
@@ -177,3 +177,17 @@ isbn="978-3-642-29116-6"
   biburl       = {https://dblp.org/rec/journals/mpc/HuangfuH18.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
+@article{DiBattista1997b, 
+  doi = {10.1016/s0925-7721(96)00005-3}, 
+  url = {https://doi.org/10.1016/s0925-7721(96)00005-3}, 
+  year = {1997}, 
+  month = apr, 
+  publisher = {Elsevier {BV}}, 
+  volume = {7}, 
+  number = {5-6}, 
+  pages = {303--325}, 
+  author = {Giuseppe Di Battista and Ashim Garg and Giuseppe Liotta and Roberto Tamassia and Emanuele Tassinari and Francesco Vargiu}, 
+  title = {An experimental comparison of four graph drawing algorithms}, 
+  journal = {Computational Geometry} 
+}
