swap out arxive refs

--- a/tex/lit.bib
+++ b/tex/lit.bib
@@ -1,16 +1,22 @@
-@article{DBLP:journals/corr/AvinLP15,
+@inproceedings{DBLP:conf/asunam/AvinLNP19,
   author       = {Chen Avin and
                   Zvi Lotker and
+                  Yinon Nahum and
                   David Peleg},
-  title        = {Random Preferential Attachment Hypergraphs},
-  journal      = {CoRR},
-  volume       = {abs/1502.02401},
-  year         = {2015},
-  url          = {http://arxiv.org/abs/1502.02401},
-  eprinttype    = {arXiv},
-  eprint       = {1502.02401},
-  timestamp    = {Mon, 13 Aug 2018 16:48:16 +0200},
-  biburl       = {https://dblp.org/rec/journals/corr/AvinLP15.bib},
+  editor       = {Francesca Spezzano and
+                  Wei Chen and
+                  Xiaokui Xiao},
+  title        = {Random preferential attachment hypergraph},
+  booktitle    = {{ASONAM} '19: International Conference on Advances in Social Networks
+                  Analysis and Mining, Vancouver, British Columbia, Canada, 27-30 August,
+                  2019},
+  pages        = {398--405},
+  publisher    = {{ACM}},
+  year         = {2019},
+  url          = {https://doi.org/10.1145/3341161.3342867},
+  doi          = {10.1145/3341161.3342867},
+  timestamp    = {Sat, 09 Apr 2022 12:39:00 +0200},
+  biburl       = {https://dblp.org/rec/conf/asunam/AvinLNP19.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
@@ -58,18 +64,20 @@
   year={2022}, 
   pages={400–429}
 }
-@article{DBLP:journals/corr/abs-1205-6233,
+
+@article{DBLP:journals/kais/YangL15,
   author       = {Jaewon Yang and
                   Jure Leskovec},
-  title        = {Defining and Evaluating Network Communities based on Ground-truth},
-  journal      = {CoRR},
-  volume       = {abs/1205.6233},
-  year         = {2012},
-  url          = {http://arxiv.org/abs/1205.6233},
-  eprinttype    = {arXiv},
-  eprint       = {1205.6233},
-  timestamp    = {Mon, 13 Aug 2018 16:49:09 +0200},
-  biburl       = {https://dblp.org/rec/journals/corr/abs-1205-6233.bib},
+  title        = {Defining and evaluating network communities based on ground-truth},
+  journal      = {Knowl. Inf. Syst.},
+  volume       = {42},
+  number       = {1},
+  pages        = {181--213},
+  year         = {2015},
+  url          = {https://doi.org/10.1007/s10115-013-0693-z},
+  doi          = {10.1007/S10115-013-0693-Z},
+  timestamp    = {Sun, 02 Jun 2019 21:01:55 +0200},
+  biburl       = {https://dblp.org/rec/journals/kais/YangL15.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
