use title case in title and container-title

--- a/tex/lit.bib
+++ b/tex/lit.bib
@@ -40,7 +40,7 @@
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{SimpleHypergraphs.js,
+@misc{SimpleHypergraphs.js,
   author       = {Carmine Spagnuolo and
                   Gennaro Cordasco and
                   Przemyslaw Szufel and
@@ -50,7 +50,7 @@
                   Alessia Antelmi},
   title        = {SimpleHypergraphs.jl},
   year         = {2020},
-  url          = {https://github.com/pszufe/SimpleHypergraphs.jl/blob/master/src/models/random-models.jl},
+  howpublished = {\url{https://github.com/pszufe/SimpleHypergraphs.jl/blob/master/src/models/random-models.jl}},
 }
 
 @article{Giroire_Nisse_Trolliet_Sulkowska_2022, 
@@ -95,6 +95,7 @@ pages="63--76",
 abstract="We are going to analyze simple search tree algorithms for approximating d-Hitting Set, focussing on the case of factor-2 approximations for d{\thinspace}={\thinspace}3. We also derive several results for hypergraph instances of bounded degree, including a new polynomial-time approximation.",
 isbn="978-3-642-29116-6"
 }
+
 @inproceedings{DBLP:conf/approx/SaketS12,
   author       = {Rishi Saket and
                   Maxim Sviridenko},
@@ -105,7 +106,7 @@ isbn="978-3-642-29116-6"
   title        = {New and Improved Bounds for the Minimum Set Cover Problem},
   booktitle    = {Approximation, Randomization, and Combinatorial Optimization. Algorithms
                   and Techniques - 15th International Workshop, {APPROX} 2012, and 16th
-                  International Workshop, {RANDOM} 2012, Cambridge, MA, USA, August
+                  International Workshop, {RANDOM} 2012, Cambridge, {MA}, {USA}, August
                   15-17, 2012. Proceedings},
   series       = {Lecture Notes in Computer Science},
   volume       = {7408},
@@ -118,6 +119,7 @@ isbn="978-3-642-29116-6"
   biburl       = {https://dblp.org/rec/conf/approx/SaketS12.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
 @article{DBLP:journals/tcs/OualiFS14,
   author       = {Mourad El Ouali and
                   Helena Fohlin and
