--- a/tex/lit.bib
+++ b/tex/lit.bib
@@ -201,3 +201,21 @@ isbn="978-3-642-29116-6"
   title = {An experimental comparison of four graph drawing algorithms}, 
   journal = {Computational Geometry} 
 }
+@article{DBLP:journals/jcss/BevernKSST24,
+  author       = {Ren{\'{e}} van Bevern and
+                  Artem M. Kirilin and
+                  Daniel A. Skachkov and
+                  Pavel V. Smirnov and
+                  Oxana Yu. Tsidulko},
+  title        = {Serial and parallel kernelization of Multiple Hitting Set parameterized
+                  by the Dilworth number, implemented on the {GPU}},
+  journal      = {J. Comput. Syst. Sci.},
+  volume       = {139},
+  pages        = {103479},
+  year         = {2024},
+  url          = {https://doi.org/10.1016/j.jcss.2023.103479},
+  doi          = {10.1016/J.JCSS.2023.103479},
+  timestamp    = {Tue, 28 Nov 2023 20:06:03 +0100},
+  biburl       = {https://dblp.org/rec/journals/jcss/BevernKSST24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
