--- a/tex/lit.bib
+++ b/tex/lit.bib
@@ -219,3 +219,22 @@ isbn="978-3-642-29116-6"
   biburl       = {https://dblp.org/rec/journals/jcss/BevernKSST24.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
+@article{DBLP:journals/csur/Bar-YehudaBFR04,
+  author       = {Reuven Bar{-}Yehuda and
+                  Keren Bendel and
+                  Ari Freund and
+                  Dror Rawitz},
+  title        = {Local ratio: {A} unified framework for approxmation algrithms in memoriam:
+                  Shimon Even 1935-2004},
+  journal      = {{ACM} Comput. Surv.},
+  volume       = {36},
+  number       = {4},
+  pages        = {422--463},
+  year         = {2004},
+  url          = {https://doi.org/10.1145/1041680.1041683},
+  doi          = {10.1145/1041680.1041683},
+  timestamp    = {Tue, 06 Nov 2018 12:50:50 +0100},
+  biburl       = {https://dblp.org/rec/journals/csur/Bar-YehudaBFR04.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
