--- a/tex/lit.bib
+++ b/tex/lit.bib
@@ -28,8 +28,8 @@
                   Vittorio Scarano and
                   Bogumil Kaminski and
                   Alessia Antelmi},
-  title        = {Analyzing, Exploring, and Visualizing Complex Networks via Hypergraphs
-                  using SimpleHypergraphs.jl},
+  title        = {Analyzing, {Exploring}, and {Visualizing} {Complex} {Networks} via {Hypergraphs}
+                  using {SimpleHypergraphs.jl}},
   journal      = {Internet Math.},
   volume       = {2020},
   year         = {2020},
@@ -86,7 +86,7 @@ author="Brankovic, Ljiljana
 and Fernau, Henning",
 editor="Solis-Oba, Roberto
 and Persiano, Giuseppe",
-title="Parameterized Approximation Algorithms for Hitting Set",
+title="Parameterized {Approximation} {Algorithms} for {Hitting} {Set}",
 booktitle="Approximation and Online Algorithms",
 year="2012",
 publisher="Springer Berlin Heidelberg",
@@ -103,7 +103,7 @@ isbn="978-3-642-29116-6"
                   Klaus Jansen and
                   Jos{\'{e}} D. P. Rolim and
                   Rocco A. Servedio},
-  title        = {New and Improved Bounds for the Minimum Set Cover Problem},
+  title        = {New and {Improved} Bounds for the {Minimum} {Set} {Cover} {Problem}},
   booktitle    = {Approximation, Randomization, and Combinatorial Optimization. Algorithms
                   and Techniques - 15th International Workshop, {APPROX} 2012, and 16th
                   International Workshop, {RANDOM} 2012, Cambridge, {MA}, {USA}, August
@@ -207,8 +207,8 @@ isbn="978-3-642-29116-6"
                   Daniel A. Skachkov and
                   Pavel V. Smirnov and
                   Oxana Yu. Tsidulko},
-  title        = {Serial and parallel kernelization of Multiple Hitting Set parameterized
-                  by the Dilworth number, implemented on the {GPU}},
+  title        = {Serial and parallel kernelization of {Multiple} {Hitting} {Set} parameterized
+                  by the {Dilworth} number, implemented on the {GPU}},
   journal      = {J. Comput. Syst. Sci.},
   volume       = {139},
   pages        = {103479},
@@ -226,7 +226,7 @@ isbn="978-3-642-29116-6"
                   Ari Freund and
                   Dror Rawitz},
   title        = {Local ratio: {A} unified framework for approxmation algrithms in memoriam:
-                  Shimon Even 1935-2004},
+                  {Shimon} {Even} 1935-2004},
   journal      = {{ACM} Comput. Surv.},
   volume       = {36},
   number       = {4},
