--- a/tex/header.tex
+++ b/tex/header.tex
@@ -5,6 +5,7 @@
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage{multirow}
+\usepackage{complexity}
 
 \newtheorem{lemma}{Lemma}[section]
 \DeclareMathOperator*{\argmax}{arg\,max}
