--- a/tex/lit.bib
+++ b/tex/lit.bib
@@ -81,7 +81,7 @@
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
-@InProceedings{10.1007/978-3-642-29116-6_6,
+@InProceedings{BraFer,
 author="Brankovic, Ljiljana
 and Fernau, Henning",
 editor="Solis-Oba, Roberto
