--- a/tex/template.tex
+++ b/tex/template.tex
@@ -441,7 +441,7 @@ $else$
     \textbf{$title$}
 
     \vspace{2cm}
-    \LARGE
+    \Large
 
     Bachelor-Arbeit
 
@@ -451,23 +451,31 @@ $else$
 
     an der Universität Trier 
     
-    Fachbereich IV
+    Fachbereich
 
-    \vspace{3cm}
+    \vspace{2cm}
     vorgelegt von
 
     \textbf{$author$}
 
-    Musterstraße
+    Bahnhofstraße 13
 
-    Musterstadt
+    Schweich
 
-    Matrikelnummer
+    1472010
     \vfill
 
-    Musterstadt, im [Monat] [Jahr]
+    Trier, im April 2024
     %\includegraphics[width=0.4\textwidth]{university}
+    \vspace{1cm}
 
+
+    \begin{align*}
+      &\textnormal{1. Gutachter: Henning Fernau}\\
+      &\textnormal{2. Gutachter: Kevin Mann}
+    \end{align*}
+    
+    
   \end{center}
 \end{titlepage}
 $endif$
