--- a/tex/header.tex
+++ b/tex/header.tex
@@ -6,6 +6,7 @@
 \usepackage{subcaption}
 \usepackage{multirow}
 \usepackage{complexity}
+\usepackage{amsthm}
 
 \newtheorem{lemma}{Lemma}[section]
 \DeclareMathOperator*{\argmax}{arg\,max}
