--- a/tex/template.tex
+++ b/tex/template.tex
@@ -451,7 +451,9 @@ $else$
 
     an der Universität Trier 
     
-    Fachbereich
+    Fachbereich IV
+
+    Professur Theoretische Informatik
 
     \vspace{2cm}
     vorgelegt von
@@ -460,9 +462,9 @@ $else$
 
     Bahnhofstraße 13
 
-    Schweich
+    54338 Schweich
 
-    1472010
+    Matrikelnummer 1472010
     \vfill
 
     Trier, im April 2024
