add f3 log files

--- a/tex/header.tex
+++ b/tex/header.tex
@@ -7,6 +7,7 @@
 \usepackage{multirow}
 \usepackage{complexity}
 \usepackage{amsthm}
+\usepackage{listings}
 
 \newtheorem{lemma}{Lemma}[section]
 \DeclareMathOperator*{\argmax}{arg\,max}
