--- a/tex/lit.bib
+++ b/tex/lit.bib
@@ -238,3 +238,23 @@ isbn="978-3-642-29116-6"
   biburl       = {https://dblp.org/rec/journals/csur/Bar-YehudaBFR04.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
+@inproceedings{DBLP:conf/alenex/Blasius0SW22,
+  author       = {Thomas Bl{\"{a}}sius and
+                  Tobias Friedrich and
+                  David Stangl and
+                  Christopher Weyand},
+  editor       = {Cynthia A. Phillips and
+                  Bettina Speckmann},
+  title        = {An Efficient Branch-and-Bound Solver for Hitting Set},
+  booktitle    = {Proceedings of the Symposium on Algorithm Engineering and Experiments,
+                  {ALENEX} 2022, Alexandria, VA, USA, January 9-10, 2022},
+  pages        = {209--220},
+  publisher    = {{SIAM}},
+  year         = {2022},
+  url          = {https://doi.org/10.1137/1.9781611977042.17},
+  doi          = {10.1137/1.9781611977042.17},
+  timestamp    = {Mon, 11 Apr 2022 13:26:42 +0200},
+  biburl       = {https://dblp.org/rec/conf/alenex/Blasius0SW22.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
