--- a/tex/lit.bib
+++ b/tex/lit.bib
@@ -258,3 +258,14 @@ isbn="978-3-642-29116-6"
   biburl       = {https://dblp.org/rec/conf/alenex/Blasius0SW22.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
+@inbook{WS:fernau/fptapprox,
+  author = {Henning Fernau},
+  title = {{FPT}-{Inspired} {Approximations}},
+  booktitle = {{Aspects} of {Computation} and {Automata} {Theory} with {Applications}},
+  chapter = {},
+  pages = {223-257},
+  doi = {10.1142/9789811278631_0009},
+  URL = {https://www.worldscientific.com/doi/abs/10.1142/9789811278631_0009},
+  eprint = {https://www.worldscientific.com/doi/pdf/10.1142/9789811278631_0009}
+}
