--- a/tex/lit.bib
+++ b/tex/lit.bib
@@ -269,3 +269,14 @@ isbn="978-3-642-29116-6"
   URL = {https://www.worldscientific.com/doi/abs/10.1142/9789811278631_0009},
   eprint = {https://www.worldscientific.com/doi/pdf/10.1142/9789811278631_0009}
 }
+
+@article{erdren/random,
+  author={Paul Erdős and Alfréd Rényi},
+  title={On random graphs I},
+  journal={Publicationes Mathematicae (Debrecen)},
+  volume={6},
+  number={3--4},
+  pages={290--297},
+  year={1959},
+  doi={10.5486/PMD.1959.6.3-4.12}
+}
